quick fix to test on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -137,7 +137,7 @@ ul {
 h1.name {
   color: white;
   font-family: "Ubuntu";
-  font-size: 750%;
+  font-size: 250%;
   text-align: center;
 }
 
@@ -171,8 +171,8 @@ h1.name {
   background-color: black;
   color: white;
   font-family: "Advent Pro";
-  font-size: 200%;
-  font-weight: 900;
+  font-size: 100%;
+  font-weight: 100;
   text-align: center;
 }
 
